Corrige codigo com base no sonar